--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -16,3 +16,60 @@ body {
 .Nav__HeaderSpace {
     margin: 0.5rem;
 }
+
+.DashContainer {
+    width: 70%;
+    /* display: inline-block;
+    text-align: left; */
+    /* display: flex;
+    margin: 0 auto; */
+    border: 1px solid #EEE; 
+
+}
+
+/* .DashNav {
+    width: 20%;
+    text-align: left; 
+    flex-basis: 30%;
+} */
+
+.DashNav__list {
+    list-style-type: none;
+    margin: 0 1rem;
+    padding: 0;
+    width: 25%;
+    background-color: #f1f1f1;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+  }
+  
+ .DashNav__folderLink {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+  .DashNav__folderLink:active {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  .DashNav__folderLink:hover:not(.active) {
+    background-color: #555;
+    color: white;
+  }
+
+.DashMainPosts {
+    /* display: inline-block; */
+    /* flex: 0 0 70%;
+    margin: 1rem; */
+    /* margin-left:25%;padding:1px 16px;height:1000px; */
+    margin-left: 25%;
+    padding: 1px 1rem;
+    height: 1000px;
+}
+
+
+
