updated nav components

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -73,9 +73,9 @@ html {
         display: none;
     } */
 
-.DashContainer {
+/* .DashContainer {
     border: 1px solid #EEE;
-}
+} */
 
 
 .menu__toggle {
