linked data with postlist

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -66,6 +66,28 @@ html {
 }
 
 
+.image-upload > input {
+    display: none;
+}
+
+.image-upload {
+    text-align: center;
+    position: relative;
+}
+
+.image-text {
+    visibility: hidden;
+    position: absolute;
+    top: 33%;
+    left: 40%;
+    opacity: 0;
+}
+
+.image-upload:hover .image-text {
+    visibility: visible;
+    opacity: 1;
+}
+
 
 
 
