--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,7 +17,7 @@ body {
 
 }
 
-.LandingPage, .CreateAccount, .LoginPage, .ProfilePage, .MemberProfiles, .MyProfile {
+.LandingPage, .CreateAccount, .LoginPage, .ProfilePage, .MemberProfiles, .MyProfile, .PostPage {
     margin-top: 6rem;
 }
 
