--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -34,7 +34,7 @@ footer {
     /* color: white; */
     font-weight: 500;
     margin-top: 2rem;
-    padding: 0.5rem 1rem;
+    /* padding: 0.5rem 1rem; */
     line-height: 0.6rem;
 }
 
