--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -401,7 +401,10 @@ a {
         justify-content: space-between;
     }
 
-
+    .Dashboard__browseContainer {
+        display: flex;
+        text-align: left;
+    }
    
     
     
