added image uploading feature

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,6 +17,10 @@ body {
 
 }
 
+/* input[type=file] {
+    visibility: hidden;
+} */
+
 .LandingPage, .CreateAccount, .LoginPage, .ProfilePage, .MemberProfiles, .MyProfile, .PostPage{
     margin-top: 5rem;
 }
