--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -97,6 +97,11 @@ body {
 
 }
 
+.astrik {
+    color: #ed5868;
+    margin: 0 0 0 3px;
+}
+
 /* input[type=file] {
     visibility: hidden;
 } */
@@ -122,16 +127,32 @@ body {
     margin: 0.5rem;
 }
 
+.MyProfile__headers {
+    border-bottom: 2px solid #EEE;
+}
 
+.MyProfile__headers h3 {
+    margin: 0
+}
+
+.MyProfile__form {
+    margin-top: 2rem;
+}
 
 /* .Dashboard {
    margin-top: 5.8rem;
 } */
 
-.LoginForm {
+label {
+    display: inline-block;
+    margin-bottom: 0.5rem;
+}
+
+.LoginForm, .MyProfile__userContainer {
     width: 100%;
     max-width: 420px;
     padding: 1.3rem;
+    padding-top: 0rem;
     padding-bottom: 0rem;
     margin: auto;
 }
@@ -146,6 +167,10 @@ body {
     width: 100%;
     padding: 0.2rem 0.4rem;
     border-radius: 0.2rem;
+}
+
+.LoginForm__signupLabel > label {
+    font-weight: bold;
 }
 
 .LoginForm__signupElement {
