--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -20,6 +20,7 @@
     transform: translate(-50%,-50%);
 }
 
+
 /* .EditModal__form {
     
 } */
@@ -32,9 +33,9 @@
     display: none;
 }
 
-.MyProfile {
+/* .MyProfile {
     text-align: left;
-}
+} */
 
 .rolling {
     animation: move 6s ease-out;
@@ -244,9 +245,9 @@ html {
 
 
 
-.image-upload > input {
+/* .image-upload > input, .image-upload > button {
     display: none;
-}
+} */
 
 .image-upload {
     text-align: center;
