--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,15 +13,64 @@
     width:100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
+    z-index: 999;
 }
 .modal-main {
     position:fixed;
     background: white;
     width: 100%;
-    height: 80%;
+    height: 100%;
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
+}
+
+.closeModalDiv {
+    text-align: right;
+}
+
+.closeModalDiv button {
+    border: 0;
+    margin-bottom: 0.5rem;
+    font-size: 1.25rem;
+    cursor: pointer;
+}
+
+/* .closeModalDiv button:hover {
+    
+} */
+
+
+.EditModal__form {
+    margin: 0.75rem;
+}
+
+/* .selectBox {
+    margin: 0.75rem;
+    font-size: 1rem;
+    display: flex;
+} 
+
+.selectBox label {
+    flex: 1;
+    margin-bottom: 0;
+} */
+
+.selectBox select, .subjectLabel input {
+    font-size: 1rem;
+    width: 100%;
+}
+
+.LoginForm__signupLabel textarea {
+    width: 100%;
+    height: 120px;
+    padding: 0.5rem;
+    font-size: 1rem;
+}
+
+
+.heartColor {
+    color: rgb(224, 36, 94);
 }
 
 .scroll-up-div a {
@@ -828,6 +877,11 @@ a {
         border: 1px solid #EEE;
     }
 
+    .MyProfile__userContainer {
+        max-width: none;
+        margin: 0;
+        padding: 0;
+    }
 
 
     .DashNav {
@@ -889,6 +943,7 @@ a {
         overflow-y: auto;
         /* height: calc(100vh - 124px); */
         margin-top: 1rem;
+        padding: 1rem;
     }
 
     .menu-toggle,
