--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -12,9 +12,10 @@
     left: 0;
     width:100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.4);
     z-index: 999;
 }
+
 .modal-main {
     position:fixed;
     background: white;
@@ -633,9 +634,24 @@ a {
         display: flex;
         text-align: left;
     }
-   
     
-    
+    .modal-main {
+        border: 1px solid #EEE;
+        border-radius: 6px;
+        width: 80%;
+        height: 65%;
+    }
+
+    .modalSelect {
+        flex: 1;    
+    }
+
+    .modalSelect:first-child {
+        margin-right: 0.5rem;
+    }
+
+
+
     .messageAdd input {
         flex: 1
     }
@@ -648,10 +664,6 @@ a {
         width: 95%;
         margin: 0 auto;
         margin-bottom: 5rem;
-    }
-
-    .AddPost__formContainer {
-        margin-bottom: 0.7rem;
     }
 
     .AddPost__formDiv {
