--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -193,6 +193,9 @@ body {
 
 }
 
+
+
+
 .astrik {
     color: #ed5868;
     margin: 0 0 0 3px;
@@ -202,7 +205,7 @@ body {
     visibility: hidden;
 } */
 
-.LandingPage, .CreateAccount, .LoginPage, .ProfilePage, .MemberProfiles, .MyProfile, .PostPage{
+.CreateAccount, .LoginPage, .ProfilePage, .MemberProfiles, .MyProfile, .PostPage{
     margin-top: 5rem;
 }
 
@@ -292,8 +295,10 @@ label {
 
 
 
+
 html {
     height: 100%;
+    background-color: #fafafa;
 }
 
 .post_btn {
@@ -311,6 +316,76 @@ html {
     font-size: 1rem;
     margin-right: 1rem;
 }
+
+.register_btn {
+    display: inline-block;
+    background-color: rgb(0, 154, 189);
+    color: #fff;
+    font-weight: 500;
+    border-radius: 3px;
+    width: 90%;
+    border-width: 2px;
+    padding: 0.45rem;
+    /* font-size: 1.15rem; */
+}
+
+.register_btn:hover {
+    background-color: #006b84;
+}
+
+.login_btn {
+    display: inline-block;
+    background-color: white;
+    color: rgb(0, 154, 189);
+    font-weight: 500;
+    border-radius: 3px;
+    width: 90%;
+    border-width: 2px;
+    padding: 0.45rem;
+    border: 1px solid rgb(0, 154, 189);
+    /* font-size: 1.15rem; */
+}
+
+.login_btn:hover {
+    background-color: #eaf9fd;
+}
+
+.LandingPage__descriptContainer {
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 2.5rem;
+}
+
+.LandingPage__header {
+    /* margin: 0 1rem; */
+    background: linear-gradient(rgba(0,0,0, 0.7), rgba(0, 0, 0, 0.7)), url('../../app-images/neighborhood-background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    width: 100%;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+.LandingPage__header h1 {
+    font-size: 24px;
+}
+
+.LandingPage__btnContainer {
+    margin-bottom: 0.8rem;
+    width: 90%
+}
+
+.LandingPage__btnReminder {
+    margin-bottom: 0.8rem;
+    width: 100%;
+}
+
 
  h4 {
      margin: 0;
