--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -18,7 +18,7 @@
 
 .modal-main {
     position:fixed;
-    background: white;
+    background: #fafafa;
     width: 100%;
     height: 100%;
     top:50%;
@@ -329,7 +329,7 @@ html {
     padding: 0.6rem 1.3rem;
     border: none;
     cursor: pointer;
-    background-color: rgb(23, 162, 184);
+    background-color: rgb(0, 154, 189);
     font-size: 1rem;
     margin-right: 1rem;
 }
@@ -338,11 +338,13 @@ html {
     display: inline-block;
     background-color: rgb(0, 154, 189);
     color: #fff;
-    font-weight: 500;
+    font-weight: 400;
     border-radius: 3px;
     border-width: 2px;
-    padding: 0.5rem;
-    font-size: 1.1rem;
+    /* padding: 0.5rem; */
+    padding: 0.6rem 1.3rem;
+    border: none;
+    font-size: 1rem;
 }
 
 .btn:hover {
@@ -373,7 +375,7 @@ html {
     /* font-size: 1.15rem; */
 }
 
-.register_btn:hover, .btn:hover {
+.register_btn:hover, .btn:hover, .post_btn:hover {
     background-color: #006b84;
 }
 
@@ -568,9 +570,39 @@ html {
 }
 
 .second__ul {
-    padding: 0.8rem;
+    /* padding: 0.8rem; */
     border-bottom: 2px solid #EEE;
 }
+
+.btn-div {
+    /* padding-left: .8rem; */
+    font-size: 20px;
+    margin-top: .3rem;
+}
+
+.fa-edit {
+    margin-left: 0.5rem;
+    color: rgb(0, 154, 189);
+}
+
+.fa-edit:hover {
+    color:  #006b84;
+}
+
+.fa-trash-alt {
+    color: rgba(0, 0, 0, 0.3);
+    margin-left: 0.8rem;
+}
+
+.fa-trash-alt:hover {
+    color: rgba(0,0,0,.6);
+    cursor: pointer;
+}
+
+
+
+
+
 
 .main-menu a {
   display: block;
@@ -585,6 +617,40 @@ html {
 .main-menu li:first-child a {
   border-top: 2px solid #EEE;
   padding-top: 1rem;
+}
+
+.AddPost__submitDiv {
+    position: relative;
+    color: rgb(0, 154, 189);
+}
+
+.AddPost__fileInputLabel {
+    position: absolute;
+    cursor: pointer;
+    font-size: 100px;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    padding: 0;
+}
+
+.AddPost__fileInput {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.fa-image {
+    width: 2rem;
+    font-size: 1.25rem;
+}
+
+
+.AddPost__submitContainer {
+    display: flex;
+    justify-content: space-between;
 }
 
 
